Experimenting with @UnitTest, @IntegrationTest and @E2ETest